fix: Fixing the format string fuction in TerminalControllerTests